--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
   "name": "interact-development-framework",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "description": "Framework for front-end developers working on Interact projects",
   "private": true,
   "scripts": {
-    "build": "webpack"
+    "clean": "rimraf dist",
+    "prebuild:dev": "npm run clean",
+    "build:dev": "webpack --env.dev",
+    "prebuild-watch:dev": "npm run clean",
+    "build-watch:dev": "webpack --env.dev --watch",
+    "prebuild": "npm run clean",
+    "build": "webpack --env.prod",
+    "server": "http-server dist -p 7070"
   },
   "author": {
     "name": "Troy Latchman",
@@ -23,11 +30,14 @@
     "@types/jqueryui": "^1.12.3",
     "@types/node": "^10.9.4",
     "@types/webpack-env": "^1.13.6",
+    "http-server": "^0.11.1",
+    "rimraf": "^2.6.2",
     "ts-loader": "^5.0.0",
     "typescript": "^3.0.3",
     "vue-loader": "^15.4.1",
     "vue-template-compiler": "^2.5.17",
     "webpack": "^4.17.1",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.1.0",
+    "webpack-config-utils": "^2.3.1"
   }
 }
