--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "@types/jquerymobile": "^1.4.30",
     "@types/jqueryui": "^1.12.3",
     "@types/node": "^10.9.4",
+    "@types/typed-interact-extension": "github:jacadainc/typed-interact-extension#v12.0",
     "@types/webpack-env": "^1.13.6",
     "clean-webpack-plugin": "^0.1.19",
     "http-server": "^0.11.1",
     "ts-loader": "^5.0.0",
-    "typescript": "^3.0.3",
+    "typescript": "^3.8.3",
     "vue-loader": "^15.4.1",
     "vue-template-compiler": "^2.5.17",
     "webpack": "^4.17.1",
